# OBC

./: .gitmodules
OBC/pkgs/: adafruit-circuitpython-proveskit_rp2040_v4-en_US-9.2.7.uf2
OBC/scheduling/: config.py  scheduler.py
OBC/scheduling/state_processes/: state_antennas.py  state_bootup.py  state_charge.py  state_comms.py  state_detumble.py  state_orient.py
OBC/subsystems/: config.py  subs_antenna.py  subs_battery.py  subs_camera.py  subs_imu.py  subs_magnetorquer.py  subs_nithinol.py  subs_star_tracker.py  subs_sun_sensor.py
OBC_C++/: CMakeLists.txt
OBC_C++/scheduling/: scheduler.cpp
OBC_C++/scheduling/data_processes/: data_battery.cpp
OBC_C++/scheduling/state_processes/: state_bootup.cpp
OBC_C++/subsystems/: subs_battery.cpp
